Fix iphone page size

--- a/events/amplify/index.html
+++ b/events/amplify/index.html
@@ -188,14 +188,18 @@
 
   </div>
 
-       <div class="d-flex" style="padding: auto 0; margin: 0">
-        <h3 class="heading">
-          Got a question? 
-        </h3>
-        <p class="subtext">
-         Get in touch with Yolanda for more information: <u><a class="hyperlink" href="mailto:yolanda@theblackettlabfamily.com">yolanda@theblackettlabfamily.com</a></u>.
-        </p>
-       </div>
+  <div class="d-flex" style="padding: auto 0; margin: 0">
+    <div class="col-md">
+    <h3 class="heading">
+      Got a question? 
+    </h3>
+  </div>
+  <div class="col-md">
+    <p class="subtext">
+     Get in touch with Yolanda for more information: <u><a class="hyperlink" href="mailto:yolanda@theblackettlabfamily.com">yolanda@theblackettlabfamily.com</a></u>.
+    </p>
+  </div>
+   </div>
 
     <div id="sponsors" class="d-flex flex-column text-center">
       <h1 class="heading"> Supported By</h1>
