--- a/events/amplify/index.html
+++ b/events/amplify/index.html
@@ -188,7 +188,8 @@
 
   </div>
 
-  <div class="d-flex" style="padding: auto 0; margin: 0">
+  <div class="d-flex flex-row">
+
     <div class="col-md">
     <h3 class="heading">
       Got a question? 
