Fix window bug: let email address wrap

--- a/events/amplify/index.html
+++ b/events/amplify/index.html
@@ -197,7 +197,7 @@
   </div>
   <div class="col-md">
     <p class="subtext">
-     Get in touch with Yolanda for more information: <u><a class="hyperlink" href="mailto:yolanda@theblackettlabfamily.com">yolanda@theblackettlabfamily.com</a></u>.
+     Get in touch with Yolanda for more information: <u style="word-wrap: break-word;"><a class="hyperlink" href="mailto:yolanda@theblackettlabfamily.com">yolanda@theblackettlab&shy;family.com</u></a>
     </p>
   </div>
    </div>
