Attempt #4: fixing iphone window size bug

--- a/events/amplify/index.html
+++ b/events/amplify/index.html
@@ -190,14 +190,14 @@
 
   <div class="d-flex flex-row">
 
-    <div class="col-md">
+    <div class="col">
     <h3 class="heading">
       Got a question? 
     </h3>
   </div>
-  <div class="col-md">
-    <p class="subtext">
-     Get in touch with Yolanda for more information: <u style="word-wrap: break-word;"><a class="hyperlink" href="mailto:yolanda@theblackettlabfamily.com">yolanda@theblackettlab&shy;family.com</u></a>
+  <div class="col">
+    <p class="subtext" style="word-wrap: break-word;">
+     Get in touch with&shy; Yolanda for more information:<br><u style="word-wrap: break-word;"><a class="hyperlink" href="mailto:yolanda@theblackettlabfamily.com">yolanda@&shy;theblackettlabfamily.com</u></a>
     </p>
   </div>
    </div>
