Adds extra shy for word-wrap

--- a/events/amplify/index.html
+++ b/events/amplify/index.html
@@ -197,7 +197,7 @@
   </div>
   <div class="col">
     <p class="subtext" style="word-wrap: break-word;">
-     Get in touch with&shy; Yolanda for more information:<br><u style="word-wrap: break-word;"><a class="hyperlink" href="mailto:yolanda@theblackettlabfamily.com">yolanda@&shy;theblackettlabfamily.com</u></a>
+     Get in touch with&shy; Yolanda for more information:<br><u style="word-wrap: break-word;"><a class="hyperlink" href="mailto:yolanda@theblackettlabfamily.com">yolanda@&shy;theblackettlab&shy;family.com</u></a>
     </p>
   </div>
    </div>
