Add RP2025 event page

--- a/events/amplify2024/index.html
+++ b/events/amplify2024/index.html
@@ -57,8 +57,7 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="../rp2024/index.html">Representing Physics 2024</a>
-              <a class="dropdown-item" href="#">Amplify 2024<span class="sr-only">(current)</span></a>
+              <a class="dropdown-item" href="../rp2025/index.html">Representing Physics 2025</a>
               <a class="dropdown-item" href="../past-events.html">Past Events</a>
 
             </div>
@@ -181,7 +180,7 @@
     </p>
       
     <form style="padding-top:1rem" class="text-center" target="_blank" action="https://forms.gle/FQGMdRv3REnapS8V9">
-          <button class="btn btn-lg btn-dark orange-btn" type="submit">Register here!</button>
+          <button class="btn btn-lg btn-dark orange-btn" type="submit" disabled>Register here!</button>
       </form>
 
  
