--- a/events/past-events.html
+++ b/events/past-events.html
@@ -58,7 +58,7 @@
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="parent/events/rp2024/index.html">Representing Physics 2024</a>
+                  <a class="dropdown-item" href="rp2025/index.html">Representing Physics 2025</a>
                   <a class="dropdown-item" href="#">Past Events</a>
                 </div>
               </li>
@@ -92,6 +92,8 @@
            
             <h3><a href="parent/events/rising-stars/index.html" target="_blank"></i>Rising Stars 2022</a></h3>
             <h3><a href="parent/events/rp2023/index.html" target="_blank"></i>Representing Physics 2023</a></h3>
+            <h3><a href="parent/events/rp2024/index.html" target="_blank"></i>Representing Physics 2024</a></h3>
+            <h3><a href="parent/events/amplify2024/index.html" target="_blank"></i>Amplify 2024</a></h3>
 
 
         </div></div>
