--- a/events/rising-stars/index.html
+++ b/events/rising-stars/index.html
@@ -55,8 +55,7 @@
                     <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="../parent/events/rp2024/index.html">Representing Physics 2024</a>
-                        <a class="dropdown-item" href="../amplify/index.html">Amplify 2024</a>
+                        <a class="dropdown-item" href="../rp2025/index.html">Representing Physics 2025</a>
                         <a class="dropdown-item" href="../past-events.html">Past Events</a>
                       </div>
                     </li>
