--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="events/rp2024/index.html">Representing Physics 2024</a>
-                    <a class="dropdown-item" href="events/amplify/index.html">Amplify 2024</a>
+                    <a class="dropdown-item" href="events/rp2025/index.html">Representing Physics 2025</a>
                     <a class="dropdown-item" href="events/past-events.html">Past Events</a>
                     </div>
                 </li>
@@ -197,18 +196,30 @@
                     </div>
                 </div>
 
+                <div class="flex-box team-div" style="margin-bottom: 0;" data-aos="fade-right" data-aos-duration="2000" data-aos-once="true">
+                    <img class="image" src="images/yolanda_profile.png" alt="Yolanda">
+                    <div >
+                        <h2 class="name">Yolanda Ohene</h2>
+                        <p class="role">Director of Education & Development</p>
+                        <p class="job">Researcher</p>
+
+                    </div>
+                </div>
 
         </div>
 
         <div class="shell web-only">
-            <div class="row">
-                <div class="col-md-4 ">
+            <div class="row" style="padding: 0; margin: 0">
+                <div class="col-md-4">
                     <div class="heading-div">
                         <h1 class="heading">MEET <br> THE TEAM </br>
                             <hr>
                         </h1>
                     </div>
                 </div>
+            </div>
+
+            <div class="row">
 
                 <div class="col-md-4 ">
                     <div class="flex-box team-div" data-aos="fade-up" data-aos-duration="2000" data-aos-once="true">
@@ -234,6 +245,19 @@
                             <p class="role"> Director of Media & Marketing </p>
                         </div>
 
+                    </div>
+                </div>
+
+                <div class="col-md-4 ">
+                    <div class="flex-box team-div" data-aos="fade-up" data-aos-duration="2000" data-aos-once="true">
+                        <div class="image-div">
+                            <img class="image" src="images/yolanda_profile.png" alt="Yolanda" >
+                            <p class="job"> Researcher </p>
+                        </div>
+                        <div >
+                            <h2 class="name"> Yolanda Ohene </h2>
+                            <p class="role"> Director of Education & Development</p>
+                        </div>
                     </div>
                 </div>
 
