--- a/events/rp2025/index.html
+++ b/events/rp2025/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="A summer experience for Black students interested in physics"/>
-  <title> Representing Physics 2024 | The Blackett Lab Family </title>
+  <title> Representing Physics 2025 | The Blackett Lab Family </title>
   <link rel="icon" href="../parent/images/logo_black.png">
 
   <!-- CSS Stylesheets -->
@@ -57,7 +57,7 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="../rp2025/index.html">Representing Physics 2025</a>
+              <a class="dropdown-item" href="#">Representing Physics 2025<span class="sr-only">(current)</span></a>
               <a class="dropdown-item" href="../past-events.html">Past Events</a>
 
             </div>
@@ -81,13 +81,13 @@
 
   <section class="rp-page">
       <div class="header">
-          <img src="../parent/images/rp2023-bw.png" alt="...">
-          <h1 class="heading"> <span class="orange-text">RE</span>PRESENTING <br> PHYSICS <br> 2024<hr> </h1>
+          <img src="../parent/images/rp2024/foyer_cropped.jpg" alt="...">
+          <h1 class="heading"> <span class="orange-text">RE</span>PRESENTING <br> PHYSICS <br> 2025<hr> </h1>
       </div>
 
     <div class="white-div d-flex flex-column">
       <h1 class="heading text-sm-center">Welcome! 
-        <p class="text-sm-center" style="font-family: Titillium Web;">... so nice we had to do it <b>twice!</b></p>
+        <p class="text-sm-center" style="font-family: Titillium Web;">Good things come in <b>three's!</b></p>
       </h1>
 
       <p class="subtext">We are proud and excited to be launching the comeback of our physics summer experience for <b>Year 11 and Year 12 students of Black heritage!</b>
@@ -99,8 +99,8 @@
     <div class="white-div d-flex flex-column">
       <h1 class="heading text-sm-center">What, where & when?</h1>
 
-      <h2 class="text-sm-center"><b>RP2024 Online</b></h2>
-      <p class="subtext"> <b>RP2024 Online</b> will be hosted by us on the video platform Zoom and will be taking place on <b>Monday 12 August 2024</b>. That means you will only need a <b>mobile phone</b>, <b>tablet</b> or <b>computer</b> with internet access to take part and so this programme is open to applicants across the UK. Some of the exciting activities you can look forward to are:</p>
+      <h2 class="text-sm-center"><b>RP2025 Online</b></h2>
+      <p class="subtext"> <b>RP2025 Online</b> will be hosted by us on the video platform Zoom and will be taking place on <b>Monday 4 August 2025</b>. That means you will only need a <b>mobile phone</b>, <b>tablet</b> or <b>computer</b> with internet access to take part and so this programme is open to applicants across the UK. Some of the exciting activities you can look forward to are:</p>
       <div class="white-div d-flex flex-column text-sm-center">
         <div class="flex-row">
           <p class="orange-text">+ Lectures by leading researchers</p>
@@ -119,10 +119,10 @@
         </div>
       </div>
 
-      <h2 class="text-sm-center"><b>RP2024 London</b></h2>
+      <h2 class="text-sm-center"><b>RP2025 London</b></h2>
 
-      <p class="subtext"><b>RP2024 London</b> is a three-day, in-person programme hosted by us across three London-based institutions: The Blackett Laboratory, National Physical Laboratory and Institute of Physics from <b>Monday 19 August 2024 - Wednesday 21 August 2024.</b> 
-      This is a non-residential programme, which means that you will need to be able to arrange your own travel between your home, or hotel, and the main site The Blackett Laboratory (Physics department) at Imperial College London on each day. </p>
+      <p class="subtext"><b>RP2025 London</b> is a three-day, in-person programme hosted by us across three London-based institutions: The Blackett Laboratory, National Physical Laboratory and Institute of Physics from <b>Monday 11 August 2025 - Wednesday 13 August 2025.</b> 
+      This is a non-residential programme, which means that you will need to be able to arrange your own travel between your home,  the Blackett Laboratory (Physics department) at Imperial College London on Monday and Tuesday, and The Institute of Physics and Wednesday. </p>
 
       <div class="white-div d-flex flex-column text-sm-center">
           <div class="flex-row">
@@ -204,15 +204,15 @@
           <li>Which programme you would like to apply for (<b>you can apply for either or both!</b>)</li>
         </ul>
          
-        <!-- <form style="padding-top:1rem" class="text-center" target="_blank" action="https://forms.gle/d6mwQynmZ15U6tQ47">
-          <button class="btn btn-lg btn-dark orange-btn" type="submit">Apply here!</button>
-        </form> -->
+        <form style="padding-top:1rem" class="text-center" target="_blank" action="https://forms.gle/d6mwQynmZ15U6tQ47">
+          <button class="btn btn-lg btn-dark orange-btn" type="submit">Apply now!</button>
+        </form>
 
-
+      <!-- 
         <form style="padding-top:1rem" class="text-sm-center">
           <button class="btn btn-lg btn-dark" type="submit" disabled>Applications have now closed.</button>
         </form>
-        We will be in touch soon with updates.
+        We will be in touch soon with updates. -->
 
       </div>
     </div>
@@ -221,27 +221,27 @@
       <h1 class="heading">Key dates</h1>
       <div id="content">
         <ul class="timeline">
-          <li class="event" data-date="27th March 2024">
-              <p><s>Student applications open</s></p>
+          <li class="event" data-date="25th March 2025">
+              <p>Student applications open</p>
           </li>
-          <li class="event" data-date="17th June 2024">
-              <p><s>Student applications close</s></p>
+          <li class="event" data-date="14th May 2025">
+              <p>Student applications close</p>
           </li>
-          <li class="event update" data-date="21st June 2024">
-              <p><s>Teacher reference deadline</s></p>
+          <li class="event update" data-date="6th June 2025">
+              <p>Teacher reference deadline</p>
           </li>
-          <li class="event" data-date="15th July 2024">
+          <li class="event" data-date="23rd June 2025">
               <p>Decisions announced & registration opens</p>
           </li>
-          <li class="event" data-date="12th August 2024">
-            <p>RP2024 Online</p>
+          <li class="event" data-date="4th August 2025">
+            <p>RP2025 Online!</p>
           </li>
-          <li class="event" data-date="19th August 2024">
-            <p>RP2024 London begins!</p>
+          <li class="event" data-date="11th August 2025">
+            <p>RP2025 London begins!</p>
           </li>
-          <li class="event" data-date="21st August 2024">
-            <p>RP2024 London ends </p>
-          </li>
+          <!-- <li class="event" data-date="13st August 2025">
+            <p>RP2025 London ends </p>
+          </li> -->
         </ul>
       </div>
     </div>
@@ -271,16 +271,16 @@
       </a>
       <div class="collapse" id="faq-2">
         <p class="subtext grey-text">
-        The programme will be lead by one of our <u><a class="hyperlink" href="../parent/index.html#meet-the-team">company directors</a></u>, Benyam Dejen and a dedicated team of trained, DBS-checked members who will supervise the students and oversee activities. 
+        This year's programme will be led by <u><a class="hyperlink" href="www.learnphysicswithafiya.com">Afiya Romain-Bains</a></u>, co-led by <u><a class="hyperlink" href="../parent/index.html#meet-the-team">Benyam Dejen</a></u> and a dedicated team of trained, DBS-checked members who will supervise the students and oversee activities. 
         </p>
       </div>
 
       <a class="btn button" data-toggle="collapse" href="#faq-3" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <p class="subtext">How much will it cost to attend the RP2024 programmes? <i class="fas fa-chevron-down" style="color: white;"></i></p>
+        <p class="subtext">How much will it cost to attend the RP2025 programmes? <i class="fas fa-chevron-down" style="color: white;"></i></p>
       </a>
       <div class="collapse" id="faq-3">
         <p class="subtext grey-text">
-        RP2024 is designed to be totally-free to attend. For attendees of RP2024 London, we will cover the costs of food and travel to and from the programme.        </p>
+        RP2025 is designed to be totally-free to attend. For attendees of RP2025 London, we will cover the costs of food and travel to and from the programme.        </p>
       </div>
 
       <a class="btn button" data-toggle="collapse" href="#faq-4" role="button" aria-expanded="false" aria-controls="collapseExample">
@@ -288,7 +288,7 @@
       </a>
       <div class="collapse" id="faq-4">
         <p class="subtext grey-text">
-          We welcome students of Black heritage of all abilities, including those with additional needs, to apply to the programme. During registration, you will be able to tell us more about your needs so we can make the programme as safe and inclusive as possible.        </p>
+          We welcome students of all abilities, including those with additional needs, to apply to the programme. During registration, you will be able to tell us more about your needs so we can make the programme as safe and inclusive as possible.        </p>
       </div>
 
       <a class="btn button" data-toggle="collapse" href="#faq-5" role="button" aria-expanded="false" aria-controls="collapseExample">
@@ -300,11 +300,11 @@
       </div>
 
       <a class="btn button" data-toggle="collapse" href="#faq-6" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <p class="subtext">I do not live in London, can I apply for RP2024 Online & London?<i class="fas fa-chevron-down" style="color: white;"></i></p>
+        <p class="subtext">I do not live in London, can I apply for RP2025 Online & London?<i class="fas fa-chevron-down" style="color: white;"></i></p>
       </a>
       <div class="collapse" id="faq-6">
         <p class="subtext grey-text">
-        This is a non-residential programme, therefore your primary residence must be in London to be considered for RP2024 Online & London. If you do not live in London but still meet the other eligiblility requirements, we encourage you to apply to RP2024 Online.
+        This is a non-residential programme, therefore your primary residence must be in London to be considered for RP2025 Online & London. If you do not live in London but still meet the other eligiblility requirements, we encourage you to apply to RP2025 Online.
         </p>
       </div>
 
@@ -315,12 +315,12 @@
       </a>
       <div class="collapse" id="faq-7">
         <p class="subtext grey-text">
-        RP2024 is designed for students who are currently (at the time of applying) in Year 11, Year 12 or equivalent. If you are not in either year group at the time of applying, we encourage you to consider alternative summer schools and programmes if you are interested in physics.
+        RP2025 is designed for students who are currently (at the time of applying) in Year 11, Year 12 or equivalent. If you are not in either year group at the time of applying, we encourage you to consider alternative summer schools and programmes if you are interested in physics.
       </p>
       </div>
 
       <a class="btn button" data-toggle="collapse" href="#faq-8" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <p class="subtext">Can I apply if I took part in last year's RP2023 programme?<i class="fas fa-chevron-down" style="color: white;"></i></p>
+        <p class="subtext">Can I apply if I took part in the previous RP2023/24 programmes?<i class="fas fa-chevron-down" style="color: white;"></i></p>
       </a>
       <div class="collapse" id="faq-8">
         <p class="subtext grey-text">
@@ -329,11 +329,11 @@
       </div>
 
       <a class="btn button" data-toggle="collapse" href="#faq-9" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <p class="subtext">I'm from London, and I can only attend part of RP2024 Online & London, should I still apply?<i class="fas fa-chevron-down" style="color: white;"></i></p>
+        <p class="subtext">I'm from London, and I can only attend part of RP2025 Online & London, should I still apply?<i class="fas fa-chevron-down" style="color: white;"></i></p>
       </a>
       <div class="collapse" id="faq-9">
         <p class="subtext grey-text">
-          RP2024 Online and RP2024 London are complementary programmes offering a range of experiences and opportunities to students of Black heritage interested in physics. We ask that you commit to attend all days of both programmes, otherwise consider applying to RP2024 Online only.
+          RP2025 Online and RP2025 London are complementary programmes offering a range of experiences and opportunities to students of Black heritage interested in physics. We ask that you commit to attend all days of both programmes, otherwise consider applying to RP2025 Online only.
         </p>
       </div>
 
