--- a/index.html
+++ b/index.html
@@ -34,48 +34,12 @@
 </head>
 
 <body id="home">
-    <section>
-        <nav id="navbar" class="navbar sticky navbar-expand-lg navbar-dark">
-            <a href="#"><img class="navbar-brand" src="images/logo_white.png" alt="Brand Logo"></a>
-            <button class="custom-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#about">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#mission">Mission</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#gallery">Gallery</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="events/rp2025/index.html">Representing Physics 2025</a>
-                    <a class="dropdown-item" href="events/past-events.html">Past Events</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#cta">Contact</a>
-                </li>
-                <li class="nav-item">
-                    <a href="https://twitter.com/blackettlabfam" class="nav-link nav-icon" target="_blank"><i class="fab fa-twitter"></i> </a>
-                </li>
-                <li class="nav-item">
-                    <a href="https://www.instagram.com/blackettlabfam/" class="nav-link nav-icon" target="_blank"><i class="fab fa-instagram"></i></a>
-                </li>
-                </ul>
-                <form target="_blank" action="https://donate.stripe.com/5kA8zKbnHb6O22c6ot">
-                <button class="donate-btn btn btn-dark black-btn" type="submit">Donate</button>
-                </form>
-            </div>
-            </nav>
+    <section id="get-navbar">
+        <script>
+            fetch("navbar.html")
+                .then(response => response.text())
+                .then(data => document.getElementById("get-navbar").innerHTML = data);
+        </script>     
     </section>
 
     <section class=header id="header">
@@ -160,7 +124,7 @@
                         <div>
                             <h2 class="name"> Sophie Martin </h2>
                             <p class="role"> Director of Media & Marketing</p>
-                            <p class="job">PhD Student</p>
+                            <p class="job">Researcher</p>
                         </div>
                 </div>
 
@@ -170,7 +134,7 @@
                         <div >
                             <h2 class="name"> Benyam Dejen </h2>
                             <p class="role"> Director of Outreach</p>
-                            <p class="job">Research Scientist</p>
+                            <p class="job">PhD Student</p>
 
                         </div>
                 </div>
@@ -238,7 +202,7 @@
                     <div class="flex-box team-div" data-aos="fade-up" data-aos-duration="2000" data-aos-once="true">
                         <div class="image-div">
                         <img class="image" src="images/sophie_profile.png" alt="Sophie" >
-                        <p class="job">PhD Student</p>
+                        <p class="job">Researcher</p>
                         </div>
                         <div >
                             <h2 class="name"> Sophie Martin </h2>
@@ -268,7 +232,7 @@
                     <div class="flex-box team-div" data-aos="fade-up" data-aos-duration="2000" data-aos-once="true">
                         <div class="image-div">
                             <img class="image" src="images/benyam_profile.png" alt="Benyam" >
-                            <p class="job">Research Scientist</p>
+                            <p class="job">PhD Student</p>
                         </div>
                             <div>
                             <h2 class="name"> Benyam Dejen </h2>
@@ -295,7 +259,7 @@
                     <div class="flex-box team-div" data-aos="fade-up" data-aos-duration="2000" data-aos-once="true">
                         <div class="image-div">
                             <img class="image" src="images/matthew_profile.png" alt="Matthew" >
-                            <p class="job"> Software Engineer </p>
+                            <p class="job">Software Engineer </p>
                         </div>
                         <div >
                             <h2 class="name"> Matthew Okenyi </h2>
@@ -649,7 +613,7 @@
                     <p class="subtext" style="word-wrap: break-word;">This will provide us with the details we need and we will get back to you.
                         </p>
                         <div class="white-border-round"><a href="https://forms.gle/a13wk1Nxck9Zip4Y7" target="_blank"><i
-                                    class="far fa-2x fa-question"></i></a></div>
+                                    class="fas fa-2x fa-question"></i></a></div>
                     </div>
 
                     <div class="inner">
@@ -722,7 +686,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="white-border-round"><a href="https://forms.gle/a13wk1Nxck9Zip4Y7" target="_blank"><i
-                            class="far fa-2x fa-question"></i></a>
+                            class="fas fa-2x fa-question"></i></a>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -733,14 +697,12 @@
                 </div>
     </section>  
         
-    <section id="footer">
-        <div class="footer" id="footer">
-          <a href="https://twitter.com/blackettlabfam" target="_blank"><i class="footer-icon fab fa-twitter"></i></a>
-          <a href="https://www.instagram.com/blackettlabfam/" target="_blank"><i class="footer-icon fab fa-instagram"></i></a>
-          <a href="https://www.linkedin.com/company/blackettlabfam" target="_blank"><i class="footer-icon fab fa-linkedin"></i></a>
-          <p class="text">© Copyright 2020 The Blackett Lab Family CIC</p>
-          <p class="text"> All Rights Reserved. <br><u><a class="hyperlink" href="files/Privacy Policy.pdf">Privacy Policy.</a></u> </p>
-        </div>
+    <section id="get-footer">
+        <script>
+            fetch("footer.html")
+                .then(response => response.text())
+                .then(data => document.getElementById("get-footer").innerHTML = data);
+        </script> 
     </section>
 
     <script src="third-party/aos-2.3.1/aos.js"></script>
