Update privacy policy footer link

--- a/footer.html
+++ b/footer.html
@@ -3,5 +3,5 @@
     <a href="https://www.instagram.com/blackettlabfam/" target="_blank"><i class="footer-icon fab fa-instagram"></i></a>
     <a href="https://www.linkedin.com/company/blackettlabfam" target="_blank"><i class="footer-icon fab fa-linkedin"></i></a>
     <p class="text">© Copyright 2020 The Blackett Lab Family CIC</p>
-    <p class="text"> All Rights Reserved. <br><u><a class="hyperlink" href="files/Privacy Policy.pdf">Privacy Policy.</a></u> </p>
+    <p class="text"> All Rights Reserved. <br><u><a class="hyperlink" href="https://theblackettlabfamily.com/files/Privacy Policy.pdf">Privacy Policy.</a></u> </p>
 </div>
