Update ogden logo - rp2025

--- a/events/rp2025/index.html
+++ b/events/rp2025/index.html
@@ -354,7 +354,7 @@
 
       <h1 class="heading">Supported by</h1>
         <div class="container">
-          <img style="width:30%" src="../parent/images/TOT_Logo_PMS392_32mm.jpg" alt="">
+          <img style="width:60%" src="../parent/images/ogden_logo.png" alt="">
         </div>
 
     </div>
