--- a/events/rp2025/index.html
+++ b/events/rp2025/index.html
@@ -243,7 +243,8 @@
       </a>
       <div class="collapse" id="faq-3">
         <p class="subtext grey-text">
-        RP2025 is designed to be totally-free to attend. For attendees of RP2025 London, we will cover the costs of food and travel to and from the programme.        </p>
+          RP2025 is designed to be free to attend, however whilst we will provide breakfast and lunch during the programme, we will not be able to cover travel to/from the The Blackett Laboratory (Days 1 & 2)/Institute of Physics (Day 3).
+        </p>
       </div>
 
       <a class="btn button" data-toggle="collapse" href="#faq-4" role="button" aria-expanded="false" aria-controls="collapseExample">
@@ -329,7 +330,7 @@
       </a>
       <div class="collapse" id="faq-13">
         <p class="subtext grey-text">
-        We welcome questions or enquiries about Representing Physics 2023. You can get in touch with us at <u><a class="hyperlink" href="mailto:outreach@theblackettlabfamily.com">outreach@theblackettlabfamily.com</a></u>.
+        We welcome questions or enquiries about Representing Physics 2025. You can get in touch with us at <u><a class="hyperlink" href="mailto:outreach@theblackettlabfamily.com">outreach@theblackettlabfamily.com</a></u>.
         </p>
       </div>
 
