Adding US embassy to amplify page

--- a/events/amplify2024/index.html
+++ b/events/amplify2024/index.html
@@ -166,12 +166,14 @@
 
     <div id="sponsors" class="d-flex flex-column text-center">
       <h1 class="heading"> Supported By</h1>
-      <div style="padding:0;" class="container" >
-        <div class="row align-items-center">
-          <div class="col">
-            <img style="width:30%;" src="../parent/images/uom_logo.png" alt="">
+      <div style="padding:0; margin:0" class="container" >
+        <div style="padding:0% 30%" class="row align-items-center">
+          <div class="col-sm">
+            <img style="width:110%;" src="../parent/images/uom_logo.png" alt="">
           </div>
-  
+          <div class="col-sm">
+            <img style="padding-top:5%" src="../parent/images/us-embassy.png" alt="">
+          </div>
         </div>
       </div>
 
