--- a/navbar.html
+++ b/navbar.html
@@ -18,7 +18,7 @@
           <a class="nav-link" href="https://theblackettlabfamily.com/#gallery">Gallery</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="https://theblackettlabfamily.com/news.html">News</a>
+            <a class="nav-link" href="https://theblackettlabfamily.com/news/">News</a>
           </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
