--- a/navbar.html
+++ b/navbar.html
@@ -24,7 +24,7 @@
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="https://theblackettlabfamily.com/events/rp2025/index.html">Representing Physics 2025</a>
-            <a class="dropdown-item" href="https://theblackettlabfamily.com/events/past-events.html">Past Events</a>
+            <!-- <a class="dropdown-item" href="https://theblackettlabfamily.com/events/past-events.html">Past Events</a> -->
           </div>
         </li>
         <li class="nav-item">
