Updates css to disable button with scss

--- a/events/rp2025/index.html
+++ b/events/rp2025/index.html
@@ -11,7 +11,7 @@
 
   <!-- CSS Stylesheets -->
   <link rel="stylesheet" href="../parent/third-party/bootstrap-4.5.3/bootstrap.min.css">
-  <link rel="stylesheet" href="../parent/css/styles_17.css">
+  <link rel="stylesheet" href="../parent/css/styles_18.css">
 
   <!-- Google Fonts -->
   <link href="../parent/third-party/google-fonts/open-sans/latin.css" rel="stylesheet">
@@ -167,15 +167,14 @@
           <li>Which programme you would like to apply for (<b>you can apply for either or both!</b>)</li>
         </ul>
          
-        <form style="padding-top:1rem" class="text-center" target="_blank" action="https://forms.gle/gW2Mm9j8tBiWUfTg9">
+        <!-- <form style="padding-top:1rem" class="text-center" target="_blank" action="https://forms.gle/gW2Mm9j8tBiWUfTg9">
           <button class="btn btn-lg btn-dark orange-btn" type="submit">Apply now!</button>
+        </form> -->
+      
+        <form style="padding-top:1rem" class="text-center">
+          <button class="btn btn-lg btn-dark disable" type="submit" disabled>Applications have now closed.</button>
+          <br> We will be in touch soon with updates.
         </form>
-
-      <!-- 
-        <form style="padding-top:1rem" class="text-sm-center">
-          <button class="btn btn-lg btn-dark" type="submit" disabled>Applications have now closed.</button>
-        </form>
-        We will be in touch soon with updates. -->
 
       </div>
     </div>
