--- a/events/amplify2025/index.html
+++ b/events/amplify2025/index.html
@@ -128,7 +128,7 @@
       <div class="flex-row">
         <p class="orange-text"> 🤝🏽 A chance to LINK UP! </p>
         <p class="subtext">
-        This is a special and unique opportunity to meet other Black undergraduates, PhD students and graduates with careers both within and outside of academia. Be prepared to experience and be inspired by the diversity within the field throughout the day.
+        This is a special and unique opportunity to meet other Black undergraduates, PhD students and graduates with careers both within and outside of academia. Be prepared to experience and be inspired by the diversity within the field throughout the event.
         </p>
       </div>
       <div class="flex-row">
@@ -155,7 +155,7 @@
 
   <div class="d-flex flex-column">
     <h3 class="heading"> 
-      ACCOMODATION & TRAVEL BURSARIES
+      ACCOMMODATION & TRAVEL BURSARIES
     </h3>
     <p class="subtext">
       Accommodation will be covered by us! There are also bursaries available to support your travel costs to Southampton. Full details on the registration form.     </p>
