Add collaborator logo

--- a/events/amplify2025/index.html
+++ b/events/amplify2025/index.html
@@ -206,11 +206,17 @@
    </div>
 
     <div id="sponsors" class="d-flex flex-column text-center">
-      <h1 class="heading"> Supported By</h1>
-      <div class="container" >
-        <div class="row justify-content-center">
-            <img style="width: 50%" src="../parent/images/uos-logo.jpg" alt="">
+      <h1 class="heading">Supported By</h1>
+      <div class="container white-div" >
+        <div class="row align-items-center" style="padding-top: 2rem;">
+            <div class="col-md-6">
+              <img src="../parent/images/uos-logo.jpg" alt="">
+            </div>
+            <div class="col-md-6">
+              <img src="../parent/images/amplify/British-Irish.jpg" alt="">
+            </div>
         </div>
+      </div>
       </div>
 
     </div>
