Add sponsor logo

--- a/events/amplify2025/index.html
+++ b/events/amplify2025/index.html
@@ -209,11 +209,14 @@
       <h1 class="heading">Supported By</h1>
       <div class="container white-div" >
         <div class="row align-items-center" style="padding-top: 2rem;">
-            <div class="col-md-6">
+            <div class="col-md-4">
               <img src="../parent/images/uos-logo.jpg" alt="">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-4">
               <img src="../parent/images/amplify/British-Irish.jpg" alt="">
+            </div>
+            <div class="col-md-4">
+              <img src="../parent/images/Imperial_College_London_new_logo.png" alt="">
             </div>
         </div>
       </div>
